<resources>
    <string name="app_name">Pet Advisor</string>
    <string name="kakao_app_key">cfde788f90db7675e0fe4fd7f067d291</string>

    <string name="Client_ID">k12iubnrKe8aUjSSeEdZ</string>
    <string name="Client_Secret">ZnMdlSPj9w</string>
    <string name="Client_Name">BoostCamp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="search">검색</string>
    <string name="search_hint">검색어를 입력하세요.</string>

    <string name="dialog_title">길찾기 방법을 선택하세요.</string>
    <string name="car">자동차</string>
    <string name="publictransit">대중교통</string>
    <string name="foot">도보</string>

    <string name="route_information">지도 상의 병원 이름을 누르면 길 안내를 받을 수 있습니다.</string>
    
    <string name="review_title_hint">후기의 제목을 입력해주세요.</string>
    <string name="cost_hint">진료비 또는 검사비를 입력해주세요.</string>
    <string name="treatment_hint">진료(검사) 내용과 후기를 입력해주세요.</string>
    <string name="text_count">글자수 : 0/300</string>

    <string name="list_review">후기</string>
    <string name="no_review">등록된 후기가 없습니다.</string>

    <string name="header_open">후기 작성</string>
    <string name="header_close">접기</string>
    <string name="enroll_review">후기 등록</string>
    <string name="by_distance">거리순으로 정렬</string>

    <string name="my_pet">My Pet</string>
    <string name="my_chart">My Chart</string>

    <string name="show_more">더 보기</string>
    <string name="no_pet">등록된 펫이 없습니다.</string>
    <string name="no_chart">등록된 차트가 없습니다.</string>
</resources>
