<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/dialog_route"
    android:orientation="vertical">

    <!--한줄만 입력 가능-->
    <EditText
        android:id="@+id/reviewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:maxLines="1"
        android:inputType="text"
        android:hint="@string/review_title_hint"/>

    <!--한줄만 입력 가능-->
    <EditText
        android:id="@+id/reviewCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:maxLines="1"
        android:inputType="number"
        android:hint="@string/cost_hint"/>

    <TextView
        android:id="@+id/textCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/text_count" />

    <EditText
        android:id="@+id/reviewContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="5"
        android:inputType="textMultiLine"
        android:maxLength="300"
        android:hint="@string/treatment_hint"/>

    <Button
        android:id="@+id/writeReviewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="후기 등록"/>

</LinearLayout>